apps/kube/cryptothrone/manifest/cryptothrone-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: cryptothrone-ingress
    namespace: cryptothrone
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
        nginx.ingress.kubernetes.io/ssl-redirect: 'true'
        cert-manager.io/cluster-issuer: 'letsencrypt-http'
spec:
    ingressClassName: nginx
    tls:
        - hosts:
              - cryptothrone.com
          secretName: cryptothrone-tls
    rules:
        - host: cryptothrone.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: cryptothrone-service
                            port:
                                number: 4321
