apps/kube/cryptothrone/manifest/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: cryptothrone-route
    namespace: cryptothrone
spec:
    parentRefs:
        - name: kbve-gateway
          namespace: kbve
    hostnames:
        - cryptothrone.com
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: cryptothrone-service
                port: 4321
